--- a/mod01_review.ipynb
+++ b/mod01_review.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "b568e1f7",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "[400 rows x 11 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "Credit = pd.read_csv('data/Credit.csv')\n",
+    "Credit = pd.read_csv('Data/Credit.csv') \n",
     "Credit"
    ]
   },
@@ -272,11 +272,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "a4c1aba7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Income' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[35], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mIncome\u001b[49m, Limit, Rating, Cards, Age, Education, Own, Student, Married, Region, Balance\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Income' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "Income, Limit, Rating, Cards, Age, Education, Own, Student, Married, Region, Balance"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -292,7 +306,10 @@
    "id": "c58526a0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Income, Limit, Rating, Cards, Age, Education, Balance - Quantitative/numeric\n",
+    "Own, Student, Married, Region - Categorical"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -307,9 +324,20 @@
    "execution_count": null,
    "id": "27ba0f36",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55.6675\n"
+     ]
+    }
+   ],
    "source": [
-    "# mean"
+    "# mean\n",
+    "Credit = pd.read_csv('Data/Credit.csv')\n",
+    "mean = Credit['Age'].mean()\n",
+    "print(mean)"
    ]
   },
   {
@@ -317,9 +345,20 @@
    "execution_count": null,
    "id": "7632855f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# median"
+    "# median\n",
+    "Credit = pd.read_csv('Data/Credit.csv')\n",
+    "median = Credit['Age'].median()\n",
+    "print(median)"
    ]
   },
   {
@@ -327,9 +366,22 @@
    "execution_count": null,
    "id": "4806a30d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    44\n",
+      "1    66\n",
+      "Name: Age, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "# mode"
+    "# mode\n",
+    "Credit = pd.read_csv('Data/Credit.csv')\n",
+    "mode = Credit['Age'].mode()\n",
+    "print(mode)"
    ]
   },
   {
@@ -345,9 +397,31 @@
    "execution_count": null,
    "id": "58123002",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Age Region   Income\n",
+      "0     34  South   14.891\n",
+      "1     82   West  106.025\n",
+      "2     71   West  104.593\n",
+      "3     36   West  148.924\n",
+      "4     68  South   55.882\n",
+      "..   ...    ...      ...\n",
+      "395   32  South   12.096\n",
+      "396   65   East   13.364\n",
+      "397   67  South   57.872\n",
+      "398   44  South   37.728\n",
+      "399   64   West   18.701\n",
+      "\n",
+      "[400 rows x 3 columns]\n"
+     ]
+    }
+   ],
    "source": [
-    "Subset = "
+    "Subset = Credit[['Age', 'Region', 'Income']]\n",
+    "print(Subset.head(len(Credit)))"
    ]
   },
   {
@@ -365,9 +439,31 @@
    "execution_count": null,
    "id": "0bc1b835",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Age Region   Income\n",
+      "0     34  South   14.891\n",
+      "3     36   West  148.924\n",
+      "6     37   East   20.996\n",
+      "9     41   East   71.061\n",
+      "10    30  South   63.095\n",
+      "..   ...    ...      ...\n",
+      "391   43  South   73.327\n",
+      "392   24   West   25.974\n",
+      "394   40  South   49.794\n",
+      "395   32  South   12.096\n",
+      "398   44  South   37.728\n",
+      "\n",
+      "[173 rows x 3 columns]\n"
+     ]
+    }
+   ],
    "source": [
-    "Younger = "
+    "Younger = Subset[Subset['Age']<=50]\n",
+    "print(Younger)"
    ]
   },
   {
@@ -375,9 +471,31 @@
    "execution_count": null,
    "id": "6e7c6740",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Age Region   Income\n",
+      "1     82   West  106.025\n",
+      "2     71   West  104.593\n",
+      "4     68  South   55.882\n",
+      "5     77  South   80.180\n",
+      "7     87   West   71.408\n",
+      "..   ...    ...      ...\n",
+      "390   81   West  135.118\n",
+      "393   65   East   17.316\n",
+      "396   65   East   13.364\n",
+      "397   67  South   57.872\n",
+      "399   64   West   18.701\n",
+      "\n",
+      "[239 rows x 3 columns]\n"
+     ]
+    }
+   ],
    "source": [
-    "Older = "
+    "Older = Subset[Subset['Age']>=50]\n",
+    "print(Older)"
    ]
   },
   {
@@ -393,9 +511,19 @@
    "execution_count": null,
    "id": "a0492480",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "38.89017341040462\n"
+     ]
+    }
+   ],
    "source": [
-    "# mean of younger"
+    "# mean of younger\n",
+    "Younger = Subset[Subset['Age']<=50]\n",
+    "print(Younger['Age'].mean())\n"
    ]
   },
   {
@@ -403,9 +531,19 @@
    "execution_count": null,
    "id": "06057f97",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "67.52719665271967\n"
+     ]
+    }
+   ],
    "source": [
-    "# mean of older"
+    "# mean of older\n",
+    "Younger = Subset[Subset['Age']>=50]\n",
+    "print(Younger['Age'].mean())"
    ]
   },
   {
@@ -413,9 +551,19 @@
    "execution_count": null,
    "id": "38678f7c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# median of younger"
+    "# median of younger\n",
+    "Younger = Subset[Subset['Age']<=50]\n",
+    "print(Younger['Age'].median())"
    ]
   },
   {
@@ -423,9 +571,19 @@
    "execution_count": null,
    "id": "b7bc82dd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "67.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# median of older"
+    "# median of older\n",
+    "Younger = Subset[Subset['Age']>=50]\n",
+    "print(Younger['Age'].median())"
    ]
   },
   {
@@ -441,7 +599,7 @@
    "id": "896e300a",
    "metadata": {},
    "source": [
-    "Type your answer here."
+    "Its basically tells us that the data is not skewed and is almost symmetric"
    ]
   },
   {
@@ -457,8 +615,19 @@
    "execution_count": null,
    "id": "d2954498",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (912360643.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[20], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    There are 4 possible values: North, South, East, West\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "There are 4 possible values: North, South, East, West"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -473,8 +642,24 @@
    "execution_count": null,
    "id": "308f0c5b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Region\n",
+      "South    199\n",
+      "West     102\n",
+      "East      99\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "freq_table = Subset['Region'].value_counts()\n",
+    "print(freq_table)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -489,24 +674,72 @@
    "execution_count": null,
    "id": "3bfc07c3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Student   Income\n",
+      "0        No   14.891\n",
+      "1       Yes  106.025\n",
+      "2        No  104.593\n",
+      "3        No  148.924\n",
+      "4        No   55.882\n",
+      "..      ...      ...\n",
+      "395      No   12.096\n",
+      "396      No   13.364\n",
+      "397      No   57.872\n",
+      "398      No   37.728\n",
+      "399      No   18.701\n",
+      "\n",
+      "[400 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Subset2 = Credit[['Student', 'Income']]\n",
+    "print(Subset2.head(len(Credit)))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "fad3d6c9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "47.29205\n"
+     ]
+    }
+   ],
+   "source": [
+    "is_student = Subset2[Subset2['Student'] == \"Yes\"]\n",
+    "avg_student_income = is_student['Income'].mean()\n",
+    "print(avg_student_income)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "b818baa7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44.988533333333336\n"
+     ]
+    }
+   ],
+   "source": [
+    "is_not_student = Subset2[Subset2['Student'] == \"No\"]\n",
+    "avg_income = is_not_student['Income'].mean()\n",
+    "print(avg_income)"
+   ]
   },
   {
    "cell_type": "code",
@@ -531,8 +764,30 @@
    "execution_count": null,
    "id": "65cbe997",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0      0.092346\n",
+      "1      0.135892\n",
+      "2      0.081979\n",
+      "3      0.101431\n",
+      "4      0.067592\n",
+      "         ...   \n",
+      "395    0.136585\n",
+      "396    0.125065\n",
+      "397    0.033086\n",
+      "398    0.000000\n",
+      "399    0.174873\n",
+      "Name: Utilization, Length: 400, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "Credit['Utilization'] = Credit['Balance']/Credit['Limit']\n",
+    "print(Credit['Utilization'])"
+   ]
   },
   {
    "cell_type": "code",
@@ -555,13 +810,24 @@
    "execution_count": null,
    "id": "58512879",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.27693008426326576\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_percent = Credit['Utilization'].max()\n",
+    "print(max_percent)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "islpenv",
    "language": "python",
    "name": "python3"
   },
@@ -575,7 +841,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
