--- a/mod01_review.ipynb
+++ b/mod01_review.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "id": "b568e1f7",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "[400 rows x 11 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,24 +272,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "a4c1aba7",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Income' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[35], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mIncome\u001b[49m, Limit, Rating, Cards, Age, Education, Own, Student, Married, Region, Balance\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Income' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Income, Limit, Rating, Cards, Age, Education, Own, Student, Married, Region, Balance"
+    "#Income, Limit, Rating, Cards, Age, Education, Own, Student, Married, Region, Balance"
    ]
   },
   {
@@ -302,10 +290,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c58526a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Income' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mIncome\u001b[49m, Limit, Rating, Cards, Age, Education, Balance \u001b[38;5;241m-\u001b[39m Quantitative\u001b[38;5;241m/\u001b[39mnumeric\n\u001b[1;32m      2\u001b[0m Own, Student, Married, Region \u001b[38;5;241m-\u001b[39m Categorical\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Income' is not defined"
+     ]
+    }
+   ],
    "source": [
     "Income, Limit, Rating, Cards, Age, Education, Balance - Quantitative/numeric\n",
     "Own, Student, Married, Region - Categorical"
@@ -626,7 +626,7 @@
     }
    ],
    "source": [
-    "There are 4 possible values: North, South, East, West"
+    "#There are 4 possible values: North, South, East, West"
    ]
   },
   {
