--- a/mod01_review.ipynb
+++ b/mod01_review.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "b568e1f7",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "[400 rows x 11 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "Credit = pd.read_csv('Data/Credit.csv') \n",
+    "Credit = pd.read_csv('data/Credit.csv') \n",
     "Credit"
    ]
   },
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "a4c1aba7",
    "metadata": {},
    "outputs": [],
@@ -290,25 +290,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "c58526a0",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Income' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mIncome\u001b[49m, Limit, Rating, Cards, Age, Education, Balance \u001b[38;5;241m-\u001b[39m Quantitative\u001b[38;5;241m/\u001b[39mnumeric\n\u001b[1;32m      2\u001b[0m Own, Student, Married, Region \u001b[38;5;241m-\u001b[39m Categorical\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Income' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Income, Limit, Rating, Cards, Age, Education, Balance - Quantitative/numeric\n",
-    "Own, Student, Married, Region - Categorical"
+    "#Income, Limit, Rating, Cards, Age, Education, Balance - Quantitative/numeric\n",
+    "#wn, Student, Married, Region - Categorical"
    ]
   },
   {
@@ -321,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "27ba0f36",
    "metadata": {},
    "outputs": [
@@ -335,14 +323,14 @@
    ],
    "source": [
     "# mean\n",
-    "Credit = pd.read_csv('Data/Credit.csv')\n",
+    "Credit = pd.read_csv('data/Credit.csv')\n",
     "mean = Credit['Age'].mean()\n",
     "print(mean)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "7632855f",
    "metadata": {},
    "outputs": [
@@ -356,14 +344,14 @@
    ],
    "source": [
     "# median\n",
-    "Credit = pd.read_csv('Data/Credit.csv')\n",
+    "\n",
     "median = Credit['Age'].median()\n",
     "print(median)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "4806a30d",
    "metadata": {},
    "outputs": [
@@ -379,7 +367,7 @@
    ],
    "source": [
     "# mode\n",
-    "Credit = pd.read_csv('Data/Credit.csv')\n",
+    "Credit = pd.read_csv('data/Credit.csv')\n",
     "mode = Credit['Age'].mode()\n",
     "print(mode)"
    ]
@@ -394,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "58123002",
    "metadata": {},
    "outputs": [
@@ -436,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "0bc1b835",
    "metadata": {},
    "outputs": [
@@ -468,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "6e7c6740",
    "metadata": {},
    "outputs": [
@@ -508,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "a0492480",
    "metadata": {},
    "outputs": [
@@ -528,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "06057f97",
    "metadata": {},
    "outputs": [
@@ -548,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "38678f7c",
    "metadata": {},
    "outputs": [
@@ -568,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "b7bc82dd",
    "metadata": {},
    "outputs": [
@@ -612,19 +600,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "d2954498",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (912360643.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[20], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    There are 4 possible values: North, South, East, West\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#There are 4 possible values: North, South, East, West"
    ]
@@ -639,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "308f0c5b",
    "metadata": {},
    "outputs": [
@@ -671,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "3bfc07c3",
    "metadata": {},
    "outputs": [
@@ -703,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "fad3d6c9",
    "metadata": {},
    "outputs": [
@@ -723,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "b818baa7",
    "metadata": {},
    "outputs": [
@@ -761,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "65cbe997",
    "metadata": {},
    "outputs": [
@@ -807,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "58512879",
    "metadata": {},
    "outputs": [
