--- a/mod01_review.ipynb
+++ b/mod01_review.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "b568e1f7",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "[400 rows x 11 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "a4c1aba7",
    "metadata": {},
    "outputs": [],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "c58526a0",
    "metadata": {},
    "outputs": [],
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "27ba0f36",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "7632855f",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "4806a30d",
    "metadata": {},
    "outputs": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "58123002",
    "metadata": {},
    "outputs": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "0bc1b835",
    "metadata": {},
    "outputs": [
@@ -450,13 +450,13 @@
     }
    ],
    "source": [
-    "Younger = Subset[Subset['Age']<=50]\n",
-    "print(Younger)"
+    "younger = Subset[Subset['Age']<=50]\n",
+    "print(younger)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "6e7c6740",
    "metadata": {},
    "outputs": [
@@ -477,13 +477,13 @@
       "397   67  South   57.872\n",
       "399   64   West   18.701\n",
       "\n",
-      "[239 rows x 3 columns]\n"
+      "[227 rows x 3 columns]\n"
      ]
     }
    ],
    "source": [
-    "Older = Subset[Subset['Age']>=50]\n",
-    "print(Older)"
+    "older = Subset[Subset['Age']>50]\n",
+    "print(older)"
    ]
   },
   {
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "id": "a0492480",
    "metadata": {},
    "outputs": [
@@ -504,19 +504,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "38.89017341040462\n"
+      "42.883554913294795\n"
      ]
     }
    ],
    "source": [
     "# mean of younger\n",
-    "Younger = Subset[Subset['Age']<=50]\n",
-    "print(Younger['Age'].mean())\n"
+    "#younger = Subset[Subset['Age'] <= 50]\n",
+    "mean_younger = younger['Income'].mean()\n",
+    "print(mean_younger)\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "06057f97",
    "metadata": {},
    "outputs": [
@@ -524,19 +527,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "67.52719665271967\n"
+      "46.998674008810575\n"
      ]
     }
    ],
    "source": [
     "# mean of older\n",
-    "Younger = Subset[Subset['Age']>=50]\n",
-    "print(Younger['Age'].mean())"
+    "#older = Subset[Subset['Age'] > 50]\n",
+    "mean_older = older['Income'].mean()\n",
+    "print(mean_older)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "38678f7c",
    "metadata": {},
    "outputs": [
@@ -556,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "b7bc82dd",
    "metadata": {},
    "outputs": [
@@ -564,14 +568,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "67.0\n"
+      "68.0\n"
      ]
     }
    ],
    "source": [
     "# median of older\n",
-    "Younger = Subset[Subset['Age']>=50]\n",
-    "print(Younger['Age'].median())"
+    "Older = Subset[Subset['Age']>50]\n",
+    "print(Older['Age'].median())"
    ]
   },
   {
@@ -600,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "d2954498",
    "metadata": {},
    "outputs": [],
@@ -618,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "308f0c5b",
    "metadata": {},
    "outputs": [
@@ -650,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "3bfc07c3",
    "metadata": {},
    "outputs": [
@@ -682,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "fad3d6c9",
    "metadata": {},
    "outputs": [
@@ -702,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "id": "b818baa7",
    "metadata": {},
    "outputs": [
@@ -740,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "id": "65cbe997",
    "metadata": {},
    "outputs": [
@@ -786,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "id": "58512879",
    "metadata": {},
    "outputs": [
