--- a/mod01_review.ipynb
+++ b/mod01_review.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "id": "b568e1f7",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "[400 rows x 11 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "id": "a4c1aba7",
    "metadata": {},
    "outputs": [],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "id": "c58526a0",
    "metadata": {},
    "outputs": [],
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "id": "27ba0f36",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "id": "7632855f",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "id": "4806a30d",
    "metadata": {},
    "outputs": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "id": "58123002",
    "metadata": {},
    "outputs": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 56,
    "id": "0bc1b835",
    "metadata": {},
    "outputs": [
@@ -445,18 +445,18 @@
       "395   32  South   12.096\n",
       "398   44  South   37.728\n",
       "\n",
-      "[173 rows x 3 columns]\n"
+      "[161 rows x 3 columns]\n"
      ]
     }
    ],
    "source": [
-    "younger = Subset[Subset['Age']<=50]\n",
+    "younger = Subset[Subset['Age']<50]\n",
     "print(younger)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 57,
    "id": "6e7c6740",
    "metadata": {},
    "outputs": [
@@ -477,12 +477,12 @@
       "397   67  South   57.872\n",
       "399   64   West   18.701\n",
       "\n",
-      "[227 rows x 3 columns]\n"
+      "[239 rows x 3 columns]\n"
      ]
     }
    ],
    "source": [
-    "older = Subset[Subset['Age']>50]\n",
+    "older = Subset[Subset['Age']>=50]\n",
     "print(older)"
    ]
   },
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 58,
    "id": "a0492480",
    "metadata": {},
    "outputs": [
@@ -504,7 +504,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "42.883554913294795\n"
+      "41.65203726708074\n"
      ]
     }
    ],
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 59,
    "id": "06057f97",
    "metadata": {},
    "outputs": [
@@ -527,7 +527,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "46.998674008810575\n"
+      "47.6216569037657\n"
      ]
     }
    ],
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 60,
    "id": "38678f7c",
    "metadata": {},
    "outputs": [
@@ -554,13 +554,13 @@
    ],
    "source": [
     "# median of younger\n",
-    "Younger = Subset[Subset['Age']<=50]\n",
+    "#Younger = Subset[Subset['Age']<50]\n",
     "print(Younger['Age'].median())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "b7bc82dd",
    "metadata": {},
    "outputs": [
@@ -574,7 +574,7 @@
    ],
    "source": [
     "# median of older\n",
-    "Older = Subset[Subset['Age']>50]\n",
+    "#Older = Subset[Subset['Age']>=50]\n",
     "print(Older['Age'].median())"
    ]
   },
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 62,
    "id": "d2954498",
    "metadata": {},
    "outputs": [],
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 63,
    "id": "308f0c5b",
    "metadata": {},
    "outputs": [
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 64,
    "id": "3bfc07c3",
    "metadata": {},
    "outputs": [
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 65,
    "id": "fad3d6c9",
    "metadata": {},
    "outputs": [
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 66,
    "id": "b818baa7",
    "metadata": {},
    "outputs": [
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 67,
    "id": "65cbe997",
    "metadata": {},
    "outputs": [
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 68,
    "id": "58512879",
    "metadata": {},
    "outputs": [
