--- a/mod01_review.ipynb
+++ b/mod01_review.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 69,
    "id": "b568e1f7",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "[400 rows x 11 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 70,
    "id": "a4c1aba7",
    "metadata": {},
    "outputs": [],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 71,
    "id": "c58526a0",
    "metadata": {},
    "outputs": [],
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 72,
    "id": "27ba0f36",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 73,
    "id": "7632855f",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 74,
    "id": "4806a30d",
    "metadata": {},
    "outputs": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 75,
    "id": "58123002",
    "metadata": {},
    "outputs": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 76,
    "id": "0bc1b835",
    "metadata": {},
    "outputs": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 77,
    "id": "6e7c6740",
    "metadata": {},
    "outputs": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 78,
    "id": "a0492480",
    "metadata": {},
    "outputs": [
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 79,
    "id": "06057f97",
    "metadata": {},
    "outputs": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 80,
    "id": "38678f7c",
    "metadata": {},
    "outputs": [
@@ -548,19 +548,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "40.0\n"
+      "39.0\n"
      ]
     }
    ],
    "source": [
     "# median of younger\n",
     "#Younger = Subset[Subset['Age']<50]\n",
-    "print(Younger['Age'].median())"
+    "print(younger['Age'].median())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "b7bc82dd",
    "metadata": {},
    "outputs": [
@@ -568,14 +568,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "68.0\n"
+      "67.0\n"
      ]
     }
    ],
    "source": [
     "# median of older\n",
     "#Older = Subset[Subset['Age']>=50]\n",
-    "print(Older['Age'].median())"
+    "print(older['Age'].median())"
    ]
   },
   {
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 82,
    "id": "d2954498",
    "metadata": {},
    "outputs": [],
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 83,
    "id": "308f0c5b",
    "metadata": {},
    "outputs": [
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 84,
    "id": "3bfc07c3",
    "metadata": {},
    "outputs": [
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 85,
    "id": "fad3d6c9",
    "metadata": {},
    "outputs": [
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 86,
    "id": "b818baa7",
    "metadata": {},
    "outputs": [
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 87,
    "id": "65cbe997",
    "metadata": {},
    "outputs": [
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 88,
    "id": "58512879",
    "metadata": {},
    "outputs": [
