--- a/mod01_review.ipynb
+++ b/mod01_review.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 89,
    "id": "b568e1f7",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "[400 rows x 11 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 90,
    "id": "a4c1aba7",
    "metadata": {},
    "outputs": [],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 91,
    "id": "c58526a0",
    "metadata": {},
    "outputs": [],
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 92,
    "id": "27ba0f36",
    "metadata": {},
    "outputs": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 93,
    "id": "7632855f",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 94,
    "id": "4806a30d",
    "metadata": {},
    "outputs": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 95,
    "id": "58123002",
    "metadata": {},
    "outputs": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 96,
    "id": "0bc1b835",
    "metadata": {},
    "outputs": [
@@ -450,13 +450,13 @@
     }
    ],
    "source": [
-    "younger = Subset[Subset['Age']<50]\n",
-    "print(younger)"
+    "Younger = Subset[Subset['Age']<50]\n",
+    "print(Younger)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 97,
    "id": "6e7c6740",
    "metadata": {},
    "outputs": [
@@ -482,8 +482,8 @@
     }
    ],
    "source": [
-    "older = Subset[Subset['Age']>=50]\n",
-    "print(older)"
+    "Older = Subset[Subset['Age']>=50]\n",
+    "print(Older)"
    ]
   },
   {
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 98,
    "id": "a0492480",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
    "source": [
     "# mean of younger\n",
     "#younger = Subset[Subset['Age'] <= 50]\n",
-    "mean_younger = younger['Income'].mean()\n",
+    "mean_younger = Younger['Income'].mean()\n",
     "print(mean_younger)\n",
     "\n",
     "\n"
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 99,
    "id": "06057f97",
    "metadata": {},
    "outputs": [
@@ -534,13 +534,13 @@
    "source": [
     "# mean of older\n",
     "#older = Subset[Subset['Age'] > 50]\n",
-    "mean_older = older['Income'].mean()\n",
+    "mean_older = Older['Income'].mean()\n",
     "print(mean_older)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 100,
    "id": "38678f7c",
    "metadata": {},
    "outputs": [
@@ -555,12 +555,12 @@
    "source": [
     "# median of younger\n",
     "#Younger = Subset[Subset['Age']<50]\n",
-    "print(younger['Age'].median())"
+    "print(Younger['Age'].median())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 101,
    "id": "b7bc82dd",
    "metadata": {},
    "outputs": [
@@ -575,7 +575,7 @@
    "source": [
     "# median of older\n",
     "#Older = Subset[Subset['Age']>=50]\n",
-    "print(older['Age'].median())"
+    "print(Older['Age'].median())"
    ]
   },
   {
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 102,
    "id": "d2954498",
    "metadata": {},
    "outputs": [],
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 103,
    "id": "308f0c5b",
    "metadata": {},
    "outputs": [
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 104,
    "id": "3bfc07c3",
    "metadata": {},
    "outputs": [
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 105,
    "id": "fad3d6c9",
    "metadata": {},
    "outputs": [
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 106,
    "id": "b818baa7",
    "metadata": {},
    "outputs": [
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 107,
    "id": "65cbe997",
    "metadata": {},
    "outputs": [
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 108,
    "id": "58512879",
    "metadata": {},
    "outputs": [
