--- a/mod03_eda.ipynb
+++ b/mod03_eda.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 64,
    "id": "951a9a58",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 65,
    "id": "263cc530",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 66,
    "id": "9ea0baf3",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
        "(322, 20)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 67,
    "id": "809c1c50",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 68,
    "id": "4a826ee5",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 69,
    "id": "ef6f69c2",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 70,
    "id": "e96c7460",
    "metadata": {},
    "outputs": [
@@ -457,7 +457,7 @@
        "max    2460.000000  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 71,
    "id": "64eda761",
    "metadata": {},
    "outputs": [
@@ -511,12 +511,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 72,
    "id": "6dc0fac0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Hitters['AtBat_st'] = (Hitters['AtBat'] - Hitters['AtBat'].mean())/Hitters['AtBat'].std()"
+    "\n",
+    "mean_atbat = Train['AtBat'].mean()\n",
+    "std_atbat = Train['AtBat'].std()\n",
+    "\n",
+    "Train['AtBat_st'] = (Train['AtBat'] - mean_atbat) / std_atbat"
    ]
   },
   {
@@ -531,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 73,
    "id": "a9f8e3c9",
    "metadata": {},
    "outputs": [
@@ -541,7 +545,7 @@
        "190"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 74,
    "id": "caeba6d3",
    "metadata": {},
    "outputs": [
@@ -640,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 75,
    "id": "a4ef3ba2",
    "metadata": {},
    "outputs": [
@@ -682,7 +686,6 @@
        "      <th>Assists</th>\n",
        "      <th>Errors</th>\n",
        "      <th>Salary</th>\n",
-       "      <th>AtBat_st</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -705,7 +708,6 @@
        "      <td>0.353824</td>\n",
        "      <td>0.352117</td>\n",
        "      <td>0.394771</td>\n",
-       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Hits</th>\n",
@@ -726,7 +728,6 @@
        "      <td>0.320455</td>\n",
        "      <td>0.310038</td>\n",
        "      <td>0.438675</td>\n",
-       "      <td>0.967939</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>HmRun</th>\n",
@@ -747,7 +748,6 @@
        "      <td>-0.106329</td>\n",
        "      <td>0.039318</td>\n",
        "      <td>0.343028</td>\n",
-       "      <td>0.592198</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Runs</th>\n",
@@ -768,7 +768,6 @@
        "      <td>0.220567</td>\n",
        "      <td>0.240475</td>\n",
        "      <td>0.419859</td>\n",
-       "      <td>0.913060</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RBI</th>\n",
@@ -789,7 +788,6 @@
        "      <td>0.106591</td>\n",
        "      <td>0.193370</td>\n",
        "      <td>0.449457</td>\n",
-       "      <td>0.820539</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Walks</th>\n",
@@ -810,7 +808,6 @@
        "      <td>0.149656</td>\n",
        "      <td>0.129382</td>\n",
        "      <td>0.443867</td>\n",
-       "      <td>0.669845</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Years</th>\n",
@@ -831,7 +828,6 @@
        "      <td>-0.080638</td>\n",
        "      <td>-0.162140</td>\n",
        "      <td>0.400657</td>\n",
-       "      <td>0.047372</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CAtBat</th>\n",
@@ -852,7 +848,6 @@
        "      <td>0.002038</td>\n",
        "      <td>-0.066922</td>\n",
        "      <td>0.526135</td>\n",
-       "      <td>0.235526</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CHits</th>\n",
@@ -873,7 +868,6 @@
        "      <td>-0.002523</td>\n",
        "      <td>-0.062756</td>\n",
        "      <td>0.548910</td>\n",
-       "      <td>0.252717</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CHmRun</th>\n",
@@ -894,7 +888,6 @@
        "      <td>-0.158511</td>\n",
        "      <td>-0.138115</td>\n",
        "      <td>0.524931</td>\n",
-       "      <td>0.236659</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CRuns</th>\n",
@@ -915,7 +908,6 @@
        "      <td>-0.022978</td>\n",
        "      <td>-0.084395</td>\n",
        "      <td>0.562678</td>\n",
-       "      <td>0.266534</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CRBI</th>\n",
@@ -936,7 +928,6 @@
        "      <td>-0.079387</td>\n",
        "      <td>-0.100990</td>\n",
        "      <td>0.566966</td>\n",
-       "      <td>0.244053</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CWalks</th>\n",
@@ -957,7 +948,6 @@
        "      <td>-0.039130</td>\n",
        "      <td>-0.118475</td>\n",
        "      <td>0.489822</td>\n",
-       "      <td>0.166123</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PutOuts</th>\n",
@@ -978,7 +968,6 @@
        "      <td>-0.025024</td>\n",
        "      <td>0.109972</td>\n",
        "      <td>0.300480</td>\n",
-       "      <td>0.317550</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Assists</th>\n",
@@ -999,7 +988,6 @@
        "      <td>1.000000</td>\n",
        "      <td>0.706362</td>\n",
        "      <td>0.025436</td>\n",
-       "      <td>0.353824</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Errors</th>\n",
@@ -1020,7 +1008,6 @@
        "      <td>0.706362</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>-0.005401</td>\n",
-       "      <td>0.352117</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Salary</th>\n",
@@ -1041,96 +1028,71 @@
        "      <td>0.025436</td>\n",
        "      <td>-0.005401</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.394771</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AtBat_st</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.967939</td>\n",
-       "      <td>0.592198</td>\n",
-       "      <td>0.913060</td>\n",
-       "      <td>0.820539</td>\n",
-       "      <td>0.669845</td>\n",
-       "      <td>0.047372</td>\n",
-       "      <td>0.235526</td>\n",
-       "      <td>0.252717</td>\n",
-       "      <td>0.236659</td>\n",
-       "      <td>0.266534</td>\n",
-       "      <td>0.244053</td>\n",
-       "      <td>0.166123</td>\n",
-       "      <td>0.317550</td>\n",
-       "      <td>0.353824</td>\n",
-       "      <td>0.352117</td>\n",
-       "      <td>0.394771</td>\n",
-       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             AtBat      Hits     HmRun      Runs       RBI     Walks  \\\n",
-       "AtBat     1.000000  0.967939  0.592198  0.913060  0.820539  0.669845   \n",
-       "Hits      0.967939  1.000000  0.562158  0.922187  0.811073  0.641211   \n",
-       "HmRun     0.592198  0.562158  1.000000  0.650988  0.855122  0.481014   \n",
-       "Runs      0.913060  0.922187  0.650988  1.000000  0.798206  0.732213   \n",
-       "RBI       0.820539  0.811073  0.855122  0.798206  1.000000  0.615997   \n",
-       "Walks     0.669845  0.641211  0.481014  0.732213  0.615997  1.000000   \n",
-       "Years     0.047372  0.044767  0.116318  0.004541  0.146168  0.136475   \n",
-       "CAtBat    0.235526  0.227565  0.221882  0.186497  0.294688  0.277175   \n",
-       "CHits     0.252717  0.255815  0.220627  0.204830  0.308201  0.280671   \n",
-       "CHmRun    0.236659  0.202712  0.493227  0.227913  0.441771  0.332473   \n",
-       "CRuns     0.266534  0.261787  0.262361  0.250556  0.323285  0.338478   \n",
-       "CRBI      0.244053  0.232005  0.351979  0.205976  0.393184  0.308631   \n",
-       "CWalks    0.166123  0.151818  0.233154  0.182168  0.250914  0.424507   \n",
-       "PutOuts   0.317550  0.310673  0.282923  0.279347  0.343186  0.299515   \n",
-       "Assists   0.353824  0.320455 -0.106329  0.220567  0.106591  0.149656   \n",
-       "Errors    0.352117  0.310038  0.039318  0.240475  0.193370  0.129382   \n",
-       "Salary    0.394771  0.438675  0.343028  0.419859  0.449457  0.443867   \n",
-       "AtBat_st  1.000000  0.967939  0.592198  0.913060  0.820539  0.669845   \n",
+       "            AtBat      Hits     HmRun      Runs       RBI     Walks     Years  \\\n",
+       "AtBat    1.000000  0.967939  0.592198  0.913060  0.820539  0.669845  0.047372   \n",
+       "Hits     0.967939  1.000000  0.562158  0.922187  0.811073  0.641211  0.044767   \n",
+       "HmRun    0.592198  0.562158  1.000000  0.650988  0.855122  0.481014  0.116318   \n",
+       "Runs     0.913060  0.922187  0.650988  1.000000  0.798206  0.732213  0.004541   \n",
+       "RBI      0.820539  0.811073  0.855122  0.798206  1.000000  0.615997  0.146168   \n",
+       "Walks    0.669845  0.641211  0.481014  0.732213  0.615997  1.000000  0.136475   \n",
+       "Years    0.047372  0.044767  0.116318  0.004541  0.146168  0.136475  1.000000   \n",
+       "CAtBat   0.235526  0.227565  0.221882  0.186497  0.294688  0.277175  0.920289   \n",
+       "CHits    0.252717  0.255815  0.220627  0.204830  0.308201  0.280671  0.903631   \n",
+       "CHmRun   0.236659  0.202712  0.493227  0.227913  0.441771  0.332473  0.726872   \n",
+       "CRuns    0.266534  0.261787  0.262361  0.250556  0.323285  0.338478  0.882877   \n",
+       "CRBI     0.244053  0.232005  0.351979  0.205976  0.393184  0.308631  0.868812   \n",
+       "CWalks   0.166123  0.151818  0.233154  0.182168  0.250914  0.424507  0.838533   \n",
+       "PutOuts  0.317550  0.310673  0.282923  0.279347  0.343186  0.299515 -0.004684   \n",
+       "Assists  0.353824  0.320455 -0.106329  0.220567  0.106591  0.149656 -0.080638   \n",
+       "Errors   0.352117  0.310038  0.039318  0.240475  0.193370  0.129382 -0.162140   \n",
+       "Salary   0.394771  0.438675  0.343028  0.419859  0.449457  0.443867  0.400657   \n",
        "\n",
-       "             Years    CAtBat     CHits    CHmRun     CRuns      CRBI  \\\n",
-       "AtBat     0.047372  0.235526  0.252717  0.236659  0.266534  0.244053   \n",
-       "Hits      0.044767  0.227565  0.255815  0.202712  0.261787  0.232005   \n",
-       "HmRun     0.116318  0.221882  0.220627  0.493227  0.262361  0.351979   \n",
-       "Runs      0.004541  0.186497  0.204830  0.227913  0.250556  0.205976   \n",
-       "RBI       0.146168  0.294688  0.308201  0.441771  0.323285  0.393184   \n",
-       "Walks     0.136475  0.277175  0.280671  0.332473  0.338478  0.308631   \n",
-       "Years     1.000000  0.920289  0.903631  0.726872  0.882877  0.868812   \n",
-       "CAtBat    0.920289  1.000000  0.995063  0.798836  0.983345  0.949219   \n",
-       "CHits     0.903631  0.995063  1.000000  0.783306  0.984609  0.945141   \n",
-       "CHmRun    0.726872  0.798836  0.783306  1.000000  0.820243  0.929484   \n",
-       "CRuns     0.882877  0.983345  0.984609  0.820243  1.000000  0.943769   \n",
-       "CRBI      0.868812  0.949219  0.945141  0.929484  0.943769  1.000000   \n",
-       "CWalks    0.838533  0.906501  0.890954  0.799983  0.927807  0.884726   \n",
-       "PutOuts  -0.004684  0.062283  0.076547  0.112724  0.064180  0.110098   \n",
-       "Assists  -0.080638  0.002038 -0.002523 -0.158511 -0.022978 -0.079387   \n",
-       "Errors   -0.162140 -0.066922 -0.062756 -0.138115 -0.084395 -0.100990   \n",
-       "Salary    0.400657  0.526135  0.548910  0.524931  0.562678  0.566966   \n",
-       "AtBat_st  0.047372  0.235526  0.252717  0.236659  0.266534  0.244053   \n",
+       "           CAtBat     CHits    CHmRun     CRuns      CRBI    CWalks   PutOuts  \\\n",
+       "AtBat    0.235526  0.252717  0.236659  0.266534  0.244053  0.166123  0.317550   \n",
+       "Hits     0.227565  0.255815  0.202712  0.261787  0.232005  0.151818  0.310673   \n",
+       "HmRun    0.221882  0.220627  0.493227  0.262361  0.351979  0.233154  0.282923   \n",
+       "Runs     0.186497  0.204830  0.227913  0.250556  0.205976  0.182168  0.279347   \n",
+       "RBI      0.294688  0.308201  0.441771  0.323285  0.393184  0.250914  0.343186   \n",
+       "Walks    0.277175  0.280671  0.332473  0.338478  0.308631  0.424507  0.299515   \n",
+       "Years    0.920289  0.903631  0.726872  0.882877  0.868812  0.838533 -0.004684   \n",
+       "CAtBat   1.000000  0.995063  0.798836  0.983345  0.949219  0.906501  0.062283   \n",
+       "CHits    0.995063  1.000000  0.783306  0.984609  0.945141  0.890954  0.076547   \n",
+       "CHmRun   0.798836  0.783306  1.000000  0.820243  0.929484  0.799983  0.112724   \n",
+       "CRuns    0.983345  0.984609  0.820243  1.000000  0.943769  0.927807  0.064180   \n",
+       "CRBI     0.949219  0.945141  0.929484  0.943769  1.000000  0.884726  0.110098   \n",
+       "CWalks   0.906501  0.890954  0.799983  0.927807  0.884726  1.000000  0.058638   \n",
+       "PutOuts  0.062283  0.076547  0.112724  0.064180  0.110098  0.058638  1.000000   \n",
+       "Assists  0.002038 -0.002523 -0.158511 -0.022978 -0.079387 -0.039130 -0.025024   \n",
+       "Errors  -0.066922 -0.062756 -0.138115 -0.084395 -0.100990 -0.118475  0.109972   \n",
+       "Salary   0.526135  0.548910  0.524931  0.562678  0.566966  0.489822  0.300480   \n",
        "\n",
-       "            CWalks   PutOuts   Assists    Errors    Salary  AtBat_st  \n",
-       "AtBat     0.166123  0.317550  0.353824  0.352117  0.394771  1.000000  \n",
-       "Hits      0.151818  0.310673  0.320455  0.310038  0.438675  0.967939  \n",
-       "HmRun     0.233154  0.282923 -0.106329  0.039318  0.343028  0.592198  \n",
-       "Runs      0.182168  0.279347  0.220567  0.240475  0.419859  0.913060  \n",
-       "RBI       0.250914  0.343186  0.106591  0.193370  0.449457  0.820539  \n",
-       "Walks     0.424507  0.299515  0.149656  0.129382  0.443867  0.669845  \n",
-       "Years     0.838533 -0.004684 -0.080638 -0.162140  0.400657  0.047372  \n",
-       "CAtBat    0.906501  0.062283  0.002038 -0.066922  0.526135  0.235526  \n",
-       "CHits     0.890954  0.076547 -0.002523 -0.062756  0.548910  0.252717  \n",
-       "CHmRun    0.799983  0.112724 -0.158511 -0.138115  0.524931  0.236659  \n",
-       "CRuns     0.927807  0.064180 -0.022978 -0.084395  0.562678  0.266534  \n",
-       "CRBI      0.884726  0.110098 -0.079387 -0.100990  0.566966  0.244053  \n",
-       "CWalks    1.000000  0.058638 -0.039130 -0.118475  0.489822  0.166123  \n",
-       "PutOuts   0.058638  1.000000 -0.025024  0.109972  0.300480  0.317550  \n",
-       "Assists  -0.039130 -0.025024  1.000000  0.706362  0.025436  0.353824  \n",
-       "Errors   -0.118475  0.109972  0.706362  1.000000 -0.005401  0.352117  \n",
-       "Salary    0.489822  0.300480  0.025436 -0.005401  1.000000  0.394771  \n",
-       "AtBat_st  0.166123  0.317550  0.353824  0.352117  0.394771  1.000000  "
+       "          Assists    Errors    Salary  \n",
+       "AtBat    0.353824  0.352117  0.394771  \n",
+       "Hits     0.320455  0.310038  0.438675  \n",
+       "HmRun   -0.106329  0.039318  0.343028  \n",
+       "Runs     0.220567  0.240475  0.419859  \n",
+       "RBI      0.106591  0.193370  0.449457  \n",
+       "Walks    0.149656  0.129382  0.443867  \n",
+       "Years   -0.080638 -0.162140  0.400657  \n",
+       "CAtBat   0.002038 -0.066922  0.526135  \n",
+       "CHits   -0.002523 -0.062756  0.548910  \n",
+       "CHmRun  -0.158511 -0.138115  0.524931  \n",
+       "CRuns   -0.022978 -0.084395  0.562678  \n",
+       "CRBI    -0.079387 -0.100990  0.566966  \n",
+       "CWalks  -0.039130 -0.118475  0.489822  \n",
+       "PutOuts -0.025024  0.109972  0.300480  \n",
+       "Assists  1.000000  0.706362  0.025436  \n",
+       "Errors   0.706362  1.000000 -0.005401  \n",
+       "Salary   0.025436 -0.005401  1.000000  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 76,
    "id": "6ab5ba2f",
    "metadata": {},
    "outputs": [],
@@ -1186,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 77,
    "id": "ac7743dc",
    "metadata": {},
    "outputs": [
@@ -1220,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 78,
    "id": "040fbabb",
    "metadata": {},
    "outputs": [],
@@ -1238,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 79,
    "id": "50f1f78c",
    "metadata": {},
    "outputs": [],
@@ -1259,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 80,
    "id": "94b9ec90",
    "metadata": {},
    "outputs": [
@@ -1290,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 81,
    "id": "bcf402b4",
    "metadata": {},
    "outputs": [
@@ -1304,7 +1266,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1323,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 82,
    "id": "bf54b862",
    "metadata": {},
    "outputs": [],
@@ -1334,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 83,
    "id": "8d54c022",
    "metadata": {},
    "outputs": [
