--- a/mod05_nonlinear.ipynb
+++ b/mod05_nonlinear.ipynb
@@ -1271,24 +1271,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "500c728c",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "\n",
-    "X_train['temp_sq'] = X_train['temp']**2\n",
-    "X_test['temp_sq'] = X_test['temp']**2\n",
-    "X_train['workday_rush'] = X_train['workingday'] * X_train['rushhour']\n",
-    "X_test['workday_rush'] = X_test['workingday'] * X_test['rushhour']\n",
+    " \n",
+    "X_train['temp_hum_inter'] = X_train['temp'] * X_train['hum']\n",
+    "X_test['temp_hum_inter'] = X_test['temp'] * X_test['hum']\n",
     "X_train['intercept'] = 1\n",
     "X_test['intercept'] = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "953ac193",
    "metadata": {},
    "outputs": [
@@ -1410,13 +1409,12 @@
     "vars_to_include = [\n",
     "    'intercept', \n",
     "    'temp', \n",
-    "    'temp_sq',      # Polynomial term\n",
-    "    'hum', \n",
+    "    'hum',\n",
     "    'windspeed',\n",
     "    'hr_sin', \n",
     "    'hr_cos', \n",
-    "    'rushhour', \n",
-    "    'workday_rush'\n",
+    "    'workingday',\n",
+    "    'temp_hum_inter'\n",
     "] \n",
     "\n",
     "model_final = sm.OLS(y_train, X_train[vars_to_include])\n",
