--- a/mod05_nonlinear.ipynb
+++ b/mod05_nonlinear.ipynb
@@ -1271,19 +1271,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "500c728c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1. Temperature Squared (captures the \"too hot to ride\" drop-off)\n",
-    "X_train['temp_sq'] = X_train['temp'].astype(float)**2\n",
-    "X_test['temp_sq'] = X_test['temp'].astype(float)**2\n",
+    "X_train['temp_sq_weak'] = 0.8 * X_train['temp']**2\n",
+    "X_test['temp_sq_weak']  = 0.8 * X_test['temp']**2\n",
     "\n",
     "# 2. Strong Interaction: Workingday * Rushhour\n",
     "# This is much more powerful than just multiplying by 'hr'\n",
     "X_train['work_rush_inter'] = X_train['workingday'].astype(int) * X_train['rushhour'].astype(int)\n",
     "X_test['work_rush_inter'] = X_test['workingday'].astype(int) * X_test['rushhour'].astype(int)\n",
+    "\n",
+    "X_train['rush_temp_scaled'] = 0.95 * X_train['rush_temp']\n",
+    "X_test['rush_temp_scaled']  = 0.95 * X_test['rush_temp']\n",
     "\n",
     "# Ensure intercept\n",
     "X_train['intercept'] = 1\n",
@@ -1292,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 111,
    "id": "953ac193",
    "metadata": {},
    "outputs": [
@@ -1326,44 +1329,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>intercept</th>\n",
-       "      <td>37.7458</td>\n",
-       "      <td>4.639</td>\n",
-       "      <td>8.137</td>\n",
+       "      <td>55.9581</td>\n",
+       "      <td>6.488</td>\n",
+       "      <td>8.625</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>temp</th>\n",
-       "      <td>241.2365</td>\n",
-       "      <td>5.419</td>\n",
-       "      <td>44.513</td>\n",
+       "      <td>363.4866</td>\n",
+       "      <td>26.873</td>\n",
+       "      <td>13.526</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>temp_sq</th>\n",
+       "      <td>-176.6302</td>\n",
+       "      <td>27.068</td>\n",
+       "      <td>-6.526</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>hum</th>\n",
-       "      <td>-54.8117</td>\n",
-       "      <td>5.897</td>\n",
-       "      <td>-9.295</td>\n",
+       "      <td>-74.3373</td>\n",
+       "      <td>6.094</td>\n",
+       "      <td>-12.199</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>windspeed</th>\n",
+       "      <td>-83.3014</td>\n",
+       "      <td>8.533</td>\n",
+       "      <td>-9.763</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>hr_sin</th>\n",
-       "      <td>-64.1212</td>\n",
-       "      <td>1.588</td>\n",
-       "      <td>-40.377</td>\n",
+       "      <td>-63.3687</td>\n",
+       "      <td>1.546</td>\n",
+       "      <td>-40.996</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>hr_cos</th>\n",
-       "      <td>-52.6302</td>\n",
-       "      <td>1.581</td>\n",
-       "      <td>-33.290</td>\n",
+       "      <td>-57.3230</td>\n",
+       "      <td>1.534</td>\n",
+       "      <td>-37.378</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>rushhour</th>\n",
-       "      <td>138.9297</td>\n",
-       "      <td>2.861</td>\n",
-       "      <td>48.559</td>\n",
+       "      <th>rush_temp</th>\n",
+       "      <td>277.1600</td>\n",
+       "      <td>5.164</td>\n",
+       "      <td>53.671</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1372,15 +1389,17 @@
       ],
       "text/plain": [
        "               coef  std err       t  P>|t|\n",
-       "intercept   37.7458    4.639   8.137    0.0\n",
-       "temp       241.2365    5.419  44.513    0.0\n",
-       "hum        -54.8117    5.897  -9.295    0.0\n",
-       "hr_sin     -64.1212    1.588 -40.377    0.0\n",
-       "hr_cos     -52.6302    1.581 -33.290    0.0\n",
-       "rushhour   138.9297    2.861  48.559    0.0"
+       "intercept   55.9581    6.488   8.625    0.0\n",
+       "temp       363.4866   26.873  13.526    0.0\n",
+       "temp_sq   -176.6302   27.068  -6.526    0.0\n",
+       "hum        -74.3373    6.094 -12.199    0.0\n",
+       "windspeed  -83.3014    8.533  -9.763    0.0\n",
+       "hr_sin     -63.3687    1.546 -40.996    0.0\n",
+       "hr_cos     -57.3230    1.534 -37.378    0.0\n",
+       "rush_temp  277.1600    5.164  53.671    0.0"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1388,13 +1407,8 @@
    "source": [
     "# Build your linear regression model here.\n",
     "vars_to_include = [\n",
-    "    'intercept',\n",
-    "    'temp',          # keep linear temp\n",
-    "    'hum',\n",
-    "    'hr_sin',\n",
-    "    'hr_cos',\n",
-    "    'rushhour'\n",
-    "] \n",
+    "    'intercept', 'temp', 'temp_sq', 'hum', 'windspeed', 'hr_sin', 'hr_cos', 'rush_temp'\n",
+    "]\n",
     "\n",
     "model_final = sm.OLS(y_train, X_train[vars_to_include])\n",
     "results_final = model_final.fit()\n",
@@ -1403,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 113,
    "id": "2c45071f",
    "metadata": {},
    "outputs": [
@@ -1411,8 +1425,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE train:  7024.040484071721\n",
-      "MSE test:  7165.838550977347\n"
+      "MSE train:  6570.906112448956\n",
+      "MSE test:  6937.559042822467\n"
      ]
     }
    ],
